--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\jmathers\\Miniconda3\\envs\\linkhousing\\python.exe"
+    "python.pythonPath": "C:\\Users\\jmathers\\Miniconda3\\envs\\default\\python.exe"
 }
